# CodeSage

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
codesage/agents/: __init__.py
codesage/agents/fork/: __init__.py  fork_models.py  fork_policy.py  fork_worker_prompting.py
codesage/agents/framework/: __init__.py  base.py  bootstrap.py  factory.py  lifecycle.py  manager.py  specs.py
codesage/agents/modify/: __init__.py  code_modify_agent.py  modify_rag_support.py
codesage/agents/rag/: __init__.py  enhanced_rag_agent.py  turn_summary_agent.py
codesage/agents/review/: __init__.py  logic_agent.py  pr_agent.py  rag_agent.py  review_rag_agent.py  security_agent.py  supervisor.py
codesage/agents/routing/: __init__.py  supervisor_agent.py
codesage/agents/runtimes/: __init__.py  code_modify_runtime.py  enhanced_rag_runtime.py  fork_worker_runtime.py  pr_review_runtime.py
codesage/api/: main.py  runtime_services.py
codesage/api/templates/: chat.html  index.html  script.js  style.css
codesage/core/: __init__.py  builtin_hooks.py  config.py  error_handling.py  observability.py  runtime.py
codesage/document_processor/: __init__.py  chunks.py  config.py  document_loader.py  processor.py  text_splitter.py  vector_store.py
codesage/document_processor/doc_extractors/: __init__.py  base.py  docx.py  excel.py  html.py  markdown.py  pdf.py  pptx.py  text.py
codesage/indexing/: __init__.py  ingestion.py  vector_utils.py
codesage/memory/: __init__.py  event_store.py  fact_store.py  retriever.py  service.py  session_store.py
codesage/skills/: __init__.py  discovery.py  registry.py
codesage/tools/: __init__.py  agent_tool_registry.py  bm25_embedding.py  code_tools.py  file_io.py  file_tools.py  github_tools.py  llm_tools.py  milvus_manager.py  milvus_tools.py  parent_chunk_store.py  prompt_tools.py  review_guards.py  test_sandbox.py
